# mtc

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  README.md  WINDOWS_SETUP.md  index.html  package-lock.json  package.json  quickstart.ps1  quickstart.sh  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
scripts/: AGENTS.md  gen-icon.mjs
src/: AGENTS.md  App.svelte  app.css
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: AGENTS.md  default.json
src-tauri/examples/: AGENTS.md  pty_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  dirlist.rs  git.rs  main.rs  profile.rs  pty.rs  storage.rs
src/lib/: AGENTS.md  api.ts  bus.svelte.ts  defaults.ts  layout.test.ts  layout.ts  session.svelte.ts  state.svelte.ts  tiling.test.ts  tiling.ts  types.ts
src/lib/components/: AGENTS.md  CenterPanel.svelte  LeftPanel.svelte  Modal.svelte  RightPanel.svelte  TerminalPane.svelte
