[package]
name = "mtc"
version = "0.1.0"
description = "Multi-Terminal Claude Code"
authors = ["mtc"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
